# Roland-HB-1000

./: CMakeLists.txt  LICENSE  PG-1000.cpp  README.md  midi_implimentation.md
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  main.cpp
src/hardware/: adc.cpp  adc.h  display.cpp  display.h  gpio.cpp  gpio.h  hardware.cpp  hardware.h  i2c.cpp  i2c.h  value_smoother.h
src/midi/: midi.cpp  midi.h  sysex.cpp  sysex.h
src/parameters/: common_selector.cpp  common_selector.h  parameters.cpp  parameters.h  partial_selector.cpp  partial_selector.h
src/ui/: interface.cpp  interface.h
